// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Divider > Divider baseVue demo works fine 1`] = `
<div
  data-v-99a2d095=""
>
  <div
    class="divider-demo__title"
    data-v-99a2d095=""
  >
    水平分割线
  </div>
  <div
    class="t-divider t-divider--horizontal t-divider--center"
    data-v-99a2d095=""
    role="separator"
  >
    <div
      class="t-divider__content"
    >
      <!---->
    </div>
  </div>
  <div
    class="divider-demo__title"
    data-v-99a2d095=""
  >
    带文字水平分割线
  </div>
  <div
    class="t-divider t-divider--horizontal t-divider--left"
    data-v-99a2d095=""
    role="separator"
  >
    <div
      class="t-divider__content"
    >
      文字信息
    </div>
  </div>
  <div
    class="t-divider t-divider--horizontal t-divider--center"
    data-v-99a2d095=""
    role="separator"
  >
    <div
      class="t-divider__content"
    >
      文字信息
    </div>
  </div>
  <div
    class="t-divider t-divider--horizontal t-divider--right"
    data-v-99a2d095=""
    role="separator"
  >
    <div
      class="t-divider__content"
    >
      文字信息
    </div>
  </div>
  <div
    class="divider-demo__title"
    data-v-99a2d095=""
    style="margin-bottom: 10px;"
  >
    垂直分割线
  </div>
  <view
    class="divider-wrapper"
    data-v-99a2d095=""
  >
    <span
      data-v-99a2d095=""
    >
      文字信息
    </span>
    <div
      class="t-divider t-divider--vertical t-divider--center"
      data-v-99a2d095=""
      role="separator"
    >
      <div
        class="t-divider__content"
      >
        <!---->
      </div>
    </div>
    <span
      data-v-99a2d095=""
    >
      文字信息
    </span>
    <div
      class="t-divider t-divider--vertical t-divider--center"
      data-v-99a2d095=""
      role="separator"
    >
      <div
        class="t-divider__content"
      >
        <!---->
      </div>
    </div>
    <span
      data-v-99a2d095=""
    >
      文字信息
    </span>
  </view>
</div>
`;

exports[`Divider > Divider mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-57625aa4=""
>
  <h1
    class="title"
    data-v-57625aa4=""
  >
    Divider 分割符
  </h1>
  <p
    class="summary"
    data-v-57625aa4=""
  >
    用于分割、组织、细化有一定逻辑的组织元素内容和页面结构。
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-57625aa4=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        data-v-57625aa4=""
        data-v-99a2d095=""
      >
        <div
          class="divider-demo__title"
          data-v-99a2d095=""
        >
          水平分割线
        </div>
        <div
          class="t-divider t-divider--horizontal t-divider--center"
          data-v-99a2d095=""
          role="separator"
        >
          <div
            class="t-divider__content"
          >
            <!---->
          </div>
        </div>
        <div
          class="divider-demo__title"
          data-v-99a2d095=""
        >
          带文字水平分割线
        </div>
        <div
          class="t-divider t-divider--horizontal t-divider--left"
          data-v-99a2d095=""
          role="separator"
        >
          <div
            class="t-divider__content"
          >
            文字信息
          </div>
        </div>
        <div
          class="t-divider t-divider--horizontal t-divider--center"
          data-v-99a2d095=""
          role="separator"
        >
          <div
            class="t-divider__content"
          >
            文字信息
          </div>
        </div>
        <div
          class="t-divider t-divider--horizontal t-divider--right"
          data-v-99a2d095=""
          role="separator"
        >
          <div
            class="t-divider__content"
          >
            文字信息
          </div>
        </div>
        <div
          class="divider-demo__title"
          data-v-99a2d095=""
          style="margin-bottom: 10px;"
        >
          垂直分割线
        </div>
        <view
          class="divider-wrapper"
          data-v-99a2d095=""
        >
          <span
            data-v-99a2d095=""
          >
            文字信息
          </span>
          <div
            class="t-divider t-divider--vertical t-divider--center"
            data-v-99a2d095=""
            role="separator"
          >
            <div
              class="t-divider__content"
            >
              <!---->
            </div>
          </div>
          <span
            data-v-99a2d095=""
          >
            文字信息
          </span>
          <div
            class="t-divider t-divider--vertical t-divider--center"
            data-v-99a2d095=""
            role="separator"
          >
            <div
              class="t-divider__content"
            >
              <!---->
            </div>
          </div>
          <span
            data-v-99a2d095=""
          >
            文字信息
          </span>
        </view>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-57625aa4=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        data-v-57625aa4=""
        data-v-b8ad2a87=""
      >
        <div
          class="divider-demo__title"
          data-v-b8ad2a87=""
        >
          虚线样式
        </div>
        <div
          class="t-divider t-divider--horizontal t-divider--center t-divider--dashed"
          data-v-b8ad2a87=""
          role="separator"
        >
          <div
            class="t-divider__content"
          >
            <!---->
          </div>
        </div>
        <div
          class="t-divider t-divider--horizontal t-divider--left t-divider--dashed"
          data-v-b8ad2a87=""
          role="separator"
        >
          <div
            class="t-divider__content"
          >
            文字信息
          </div>
        </div>
        <div
          class="t-divider t-divider--horizontal t-divider--center t-divider--dashed"
          data-v-b8ad2a87=""
          role="separator"
        >
          <div
            class="t-divider__content"
          >
            文字信息
          </div>
        </div>
        <div
          class="t-divider t-divider--horizontal t-divider--right t-divider--dashed"
          data-v-b8ad2a87=""
          role="separator"
        >
          <div
            class="t-divider__content"
          >
            文字信息
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Divider > Divider themeVue demo works fine 1`] = `
<div
  data-v-b8ad2a87=""
>
  <div
    class="divider-demo__title"
    data-v-b8ad2a87=""
  >
    虚线样式
  </div>
  <div
    class="t-divider t-divider--horizontal t-divider--center t-divider--dashed"
    data-v-b8ad2a87=""
    role="separator"
  >
    <div
      class="t-divider__content"
    >
      <!---->
    </div>
  </div>
  <div
    class="t-divider t-divider--horizontal t-divider--left t-divider--dashed"
    data-v-b8ad2a87=""
    role="separator"
  >
    <div
      class="t-divider__content"
    >
      文字信息
    </div>
  </div>
  <div
    class="t-divider t-divider--horizontal t-divider--center t-divider--dashed"
    data-v-b8ad2a87=""
    role="separator"
  >
    <div
      class="t-divider__content"
    >
      文字信息
    </div>
  </div>
  <div
    class="t-divider t-divider--horizontal t-divider--right t-divider--dashed"
    data-v-b8ad2a87=""
    role="separator"
  >
    <div
      class="t-divider__content"
    >
      文字信息
    </div>
  </div>
</div>
`;
